<resources>
    <string name="app_name">ExamenFinal</string>
    <string name="user">Ingresar Usuario</string>
    <string name="password">Ingrese Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="Registrar">Has olvidado tu contraseña?</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="contraseña">Ingresar Contraseña</string>
    <string name="CotizacionELocales">Cotización de envios locales</string>
    <string name="CotizacionEProvincias">Cotización envios a Provincias</string>
    <string name="RegistrarEnvios">Registar Envíos</string>
    <string name="BuscarEnvios">Buscar Enviós</string>
    <string name="HistorialEnvios">Historial de envíos</string>

    <string name="BusquedaID">Busqueda de Pedidos</string>
    <string name="eliminar">Eliminar</string>
    <string name="busqueda_de_envios">Busqueda de Envios</string>
    <string name="EliminarEnvios">Eliminar</string>
    <string name="estimar">Estimar</string>
    <string name="Alto">Ingresar el Alto</string>
    <string name="Largo">Ingresar el Largo</string>
    <string name="Ancho">Ingresar el Ancho</string>
    <string name="peso">Ingresar el Peso</string>
    <string name="sobres">Sobres</string>
    <string name="_2_que_envias">2.- ¿Que envias?</string>
    <string name="cajas">Cajas</string>
    <string name="cotizacion_de_envios_a_provincias">Cotizacion de Envios a Provincias</string>
    <string name="_1_a_donde_lo_llevaremos">1.- ¿A donde lo llevaremos?</string>
    <string name="_3_cuanto_pesa">3.- ¿Cuanto Pesa?</string>
    <string name="ReistrarInfo">Registrar</string>
    <string name="listar_por_usuarios">Listar por Usuarios</string>
    <string-array name="lista">
        <item>KILOGRAMOS (KG)</item>
        <item>GRAMOS (GR)</item>
    </string-array>
    <string-array name="lista1">
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurimac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
    </string-array>
    <string-array name="lista2">
        <item>Bagua</item>
        <item>Bongora</item>
        <item>Chachapoyas</item>
        <item>Condorcanqui</item>
        <item>Luya</item>
    </string-array>
    <string-array name="lista3">
        <item>Aramango</item>
        <item>Bagua</item>
        <item>Copallin</item>
        <item>El Parco</item>
        <item>Imaza</item>
    </string-array>
</resources>