<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MenuInicio">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <Button
            android:id="@+id/buttonCELocales"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="105dp"
            android:layout_marginRight="105dp"
            android:layout_weight="13"
            android:text="@string/CotizacionELocales" />

        <Button
            android:id="@+id/buttonCEProvincias"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="105dp"
            android:layout_weight="13"
            android:text="@string/CotizacionEProvincias" />

        <Button
            android:id="@+id/buttonRegistrarEnvios"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="105dp"
            android:layout_weight="10"
            android:text="@string/RegistrarEnvios"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonBuscarEnvios"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="105dp"
            android:layout_weight="10"
            android:text="@string/BuscarEnvios"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonHistorialEnvios"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="105dp"
            android:layout_weight="10"
            android:text="@string/HistorialEnvios"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>