<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cotizacion_Envios">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/cotizacion_de_envios_a_provincias"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewP1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/_1_a_donde_lo_llevaremos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewP1">

        <Spinner
            android:id="@+id/spinner_Departamento"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_Provincia"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinner_Distrito"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewP2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/_2_que_envias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewP2">

        <CheckBox
            android:id="@+id/checkBoxSobre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sobres"
            app:buttonIcon="@drawable/sobre" />

        <CheckBox
            android:id="@+id/checkBoxCaja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cajas"
            app:buttonIcon="@drawable/abrircaja" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewP3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="@string/_3_cuanto_pesa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="20"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewP3">

        <EditText
            android:id="@+id/editTextIPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/peso"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="GRAMOS (gr)"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewP5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewP5"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ancho"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageViewLARGO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/largo"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/imageViewALTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/alto"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/editTextANCGO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Ancho"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextLARGO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Largo"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextALTO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Alto"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewP6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="6.- PRECIO ESTIMADO:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="S/.00"
        app:layout_constraintStart_toEndOf="@+id/textViewP6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="24dp"

        android:layout_marginRight="105dp"
        android:layout_weight="10"
        android:background="@drawable/btn_style"
        android:text="@string/estimar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />



</androidx.constraintlayout.widget.ConstraintLayout>