<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".MainActivity"

    >

    <ImageView
        android:id="@+id/imageViewlogo"
        android:layout_width="300dp"
        android:layout_height="295dp"
        android:layout_weight="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/editTextTextUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:background="@drawable/edt_style"
        android:drawableStart="@drawable/desconocido"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/user"
        android:importantForAutofill="no"
        android:textColorHint="#DD2C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewlogo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="9"
        android:autofillHints=""
        android:background="@drawable/edt_style"
        android:drawableStart="@drawable/candado"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:textColorHint="#DD2C00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUser"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="8dp"

        android:layout_marginRight="105dp"
        android:layout_weight="10"
        android:background="@drawable/btn_style"
        android:text="@string/ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar">

        <ImageButton
            android:id="@+id/imageButtonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="TODO" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>