<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarEnvios">

    <TextView
        android:id="@+id/TextoTitulo1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Cotizacion de Envios a Provincias"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/PrimeraPregunta1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="1.- ¿A donde lo llevaremos?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextoTitulo1"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayoutCuadro1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/PrimeraPregunta1">

        <Spinner
            android:id="@+id/spDepartamento15"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spProvincia1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spDistrito1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/SegundaPregunta2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="2.- ¿Que envias?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCuadro1" />

    <LinearLayout
        android:id="@+id/linearLayoutCuadro2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SegundaPregunta2">

        <CheckBox
            android:id="@+id/siSobres1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Sobres"
            app:buttonIcon="@drawable/sobre" />

        <CheckBox
            android:id="@+id/siCajas1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Cajas"
            app:buttonIcon="@drawable/abrircaja" />
    </LinearLayout>

    <TextView
        android:id="@+id/TerceraPregunta3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:text="3.- ¿Cuanto Pesa?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCuadro2" />

    <LinearLayout
        android:id="@+id/linearLayoutCuadro3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="20"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TerceraPregunta3">

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_style"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/peso"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/TipodePeso1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="GRAMOS (gr)"
            android:visibility="visible"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/spPesos151"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/CuartaPregunta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="4._ ¿Y cuánto mide?"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCuadro3" />

    <LinearLayout
        android:id="@+id/linearLayoutCuadro4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CuartaPregunta4"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewcaja1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ancho" />

        <ImageView
            android:id="@+id/imageViewcaja2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/largo" />

        <ImageView
            android:id="@+id/imageViewcaja3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/alto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCuadro5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCuadro4">

        <EditText
            android:id="@+id/editTextAncho"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Ancho"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextLargo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Largo"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextAlto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Alto"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="24dp"

        android:layout_marginRight="105dp"
        android:layout_weight="10"
        android:background="@drawable/btn_style"
        android:text="@string/ReistrarInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCuadro5" />

</androidx.constraintlayout.widget.ConstraintLayout>